--- a/Live-Notice.html
+++ b/Live-Notice.html
@@ -304,7 +304,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     $('.jq-login-before').hide();
                                     $('.jq-login-after').show();
                                     $('.jq-member-nam').text(data.body.user.u_name)
@@ -325,7 +325,7 @@
                         var _each_QQ = $('.jq-service-QQ')
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     _each_wechat.append(
                                         '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
                                         '<div class="img-container">' +
@@ -363,7 +363,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     setCookie(data.body.sess);
                                     console.log(data.body.sess);
                                     alert('登入成功');
@@ -383,7 +383,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     clearCookie();
                                     alert('登出成功');
                                     $('.jq-login-before').show();
@@ -411,7 +411,7 @@
                         success: function (data) {
                             if (data.status) {
                                 switch (data.status) {
-                                    case 100:
+                                    case '100':
                                         alert('问题已送出，后续将会有专人客服与您联系。');
                                         window.location.reload();
                                         break;
@@ -430,7 +430,7 @@
                         var _each = $(".jq-pop-register").find('.jq-captcha-container');
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     _each.append(
                                         data.body.image
                                     )
@@ -459,7 +459,7 @@
                         console.log(data)
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     alert('註冊成功');
                                     window.location.reload();
                                     break;
@@ -489,7 +489,7 @@
                         var _length = data.body.list.length;
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     for (i = 0; i < _length; i++) {
                                         _each.append(
                                             '<div class="row">' +
@@ -527,7 +527,7 @@
                         var _length = data.body.list.length;
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     _result_length = $('.jq-sect-notice').find('.row').length;
                                     for (i = 0; i < _length; i++) {
                                         _each.append(
