--- a/Member-Balance.html
+++ b/Member-Balance.html
@@ -402,7 +402,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     $('.jq-login-before').hide();
                                     $('.jq-login-after').show();
                                     $('.jq-member-nam').text(data.body.user.u_name)
@@ -423,7 +423,7 @@
                         var _each_QQ = $('.jq-service-QQ')
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     _each_wechat.append(
                                         '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
                                         '<div class="img-container">' +
@@ -461,7 +461,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     setCookie(data.body.sess);
                                     console.log(data.body.sess);
                                     alert('登入成功');
@@ -481,7 +481,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     clearCookie();
                                     alert('登出成功');
                                     $('.jq-login-before').show();
@@ -509,7 +509,7 @@
                         success: function (data) {
                             if (data.status) {
                                 switch (data.status) {
-                                    case 100:
+                                    case '100':
                                         alert('问题已送出，后续将会有专人客服与您联系。');
                                         window.location.reload();
                                         break;
@@ -528,7 +528,7 @@
                         var _each = $(".jq-pop-register").find('.jq-captcha-container');
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     _each.append(
                                         data.body.image
                                     )
@@ -556,7 +556,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     alert(data.message);
                                     window.location.reload();
                                     break;
@@ -577,7 +577,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     var _each = $(".jq-row-account").find('.jq-balance-num');
                                     _each.html(data.body.balance);
                                     break;
@@ -591,7 +591,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     var _each = $(".jq-row-game").find('.jq-balance-num');
                                     _each.html(data.body.balance);
                                     break;
