--- a/Member-CardManagement.html
+++ b/Member-CardManagement.html
@@ -397,7 +397,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     $('.jq-login-before').hide();
                                     $('.jq-login-after').show();
                                     $('.jq-member-nam').text(data.body.user.u_name)
@@ -418,7 +418,7 @@
                         var _each_QQ = $('.jq-service-QQ')
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     _each_wechat.append(
                                         '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
                                         '<div class="img-container">' +
@@ -456,7 +456,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     setCookie(data.body.sess);
                                     console.log(data.body.sess);
                                     alert('登入成功');
@@ -476,7 +476,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     clearCookie();
                                     alert('登出成功');
                                     $('.jq-login-before').show();
@@ -504,7 +504,7 @@
                         success: function (data) {
                             if (data.status) {
                                 switch (data.status) {
-                                    case 100:
+                                    case '100':
                                         alert('问题已送出，后续将会有专人客服与您联系。');
                                         window.location.reload();
                                         break;
@@ -523,7 +523,7 @@
                         var _each = $(".jq-pop-register").find('.jq-captcha-container');
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     _each.append(
                                         data.body.image
                                     )
@@ -551,7 +551,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     alert(data.message);
                                     window.location.reload();
                                     break;
@@ -576,7 +576,7 @@
                         var _length = data.body.list.user_bank_list.length;
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     for (i = 0; i < _length; i++) {
                                         _each.append(
                                             '<div class="tr">' +
@@ -612,7 +612,7 @@
                             success: function (data) {
                                 if (data.status) {
                                     switch (data.status) {
-                                        case 100:
+                                        case '100':
                                             alert('银行卡已锁定');
                                             window.location.reload();
                                             break;
@@ -643,7 +643,7 @@
                                 console.log(data);
                                 if (data.status) {
                                     switch (data.status) {
-                                        case 100:
+                                        case '100':
                                             alert('银行卡已删除');
                                             delete_key.parents('.tr').remove();
                                             window.location.reload();
@@ -686,7 +686,7 @@
                             console.log(_bank_id)
                             if (data.status) {
                                 switch (data.status) {
-                                    case 100:
+                                    case '100':
                                         alert(data.message);
                                         _bank_id += 1;
                                         window.location.reload();
@@ -731,7 +731,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     alert('驗證成功');
                                     $('.jq-container-step1').hide();
                                     $('.jq-container-step2').show();
