--- a/Live-Electric.html
+++ b/Live-Electric.html
@@ -311,7 +311,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     $('.jq-login-before').hide();
                                     $('.jq-login-after').show();
                                     $('.jq-member-nam').text(data.body.user.u_name)
@@ -332,7 +332,7 @@
                         var _each_QQ = $('.jq-service-QQ')
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     _each_wechat.append(
                                         '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
                                         '<div class="img-container">' +
@@ -370,7 +370,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     setCookie(data.body.sess);
                                     console.log(data.body.sess);
                                     alert('登入成功');
@@ -390,7 +390,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     clearCookie();
                                     alert('登出成功');
                                     $('.jq-login-before').show();
@@ -418,7 +418,7 @@
                         success: function (data) {
                             if (data.status) {
                                 switch (data.status) {
-                                    case 100:
+                                    case '100':
                                         alert('问题已送出，后续将会有专人客服与您联系。');
                                         window.location.reload();
                                         break;
@@ -437,7 +437,7 @@
                         var _each = $(".jq-pop-register").find('.jq-captcha-container');
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     _each.append(
                                         data.body.image
                                     )
@@ -466,7 +466,7 @@
                         console.log(data)
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     alert('註冊成功');
                                     window.location.reload();
                                     break;
@@ -491,7 +491,7 @@
                         var _length = data.body.list.length;
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     for (i = 0; i < _length; i++) {
                                         _each.append(
                                             '<div class="col-xs-2">' +
@@ -520,7 +520,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     window.location.href = data.body.game_url;
                                     break;
                             }
