--- a/Live-Question.html
+++ b/Live-Question.html
@@ -344,7 +344,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     $('.jq-login-before').hide();
                                     $('.jq-login-after').show();
                                     $('.jq-member-nam').text(data.body.user.u_name)
@@ -365,7 +365,7 @@
                         var _each_QQ = $('.jq-service-QQ')
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     _each_wechat.append(
                                         '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
                                         '<div class="img-container">' +
@@ -403,7 +403,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     setCookie(data.body.sess);
                                     console.log(data.body.sess);
                                     alert('登入成功');
@@ -423,7 +423,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     clearCookie();
                                     alert('登出成功');
                                     $('.jq-login-before').show();
@@ -451,7 +451,7 @@
                         success: function (data) {
                             if (data.status) {
                                 switch (data.status) {
-                                    case 100:
+                                    case '100':
                                         alert('问题已送出，后续将会有专人客服与您联系。');
                                         window.location.reload();
                                         break;
@@ -470,7 +470,7 @@
                         var _each = $(".jq-pop-register").find('.jq-captcha-container');
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     _each.append(
                                         data.body.image
                                     )
@@ -499,7 +499,7 @@
                         console.log(data)
                         if (data.status) {
                             switch (data.status) {
-                                case 100:
+                                case '100':
                                     alert('註冊成功');
                                     window.location.reload();
                                     break;
